WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269140
[IFC] Do don't consider natural breaking opportunities as soft-wrap boundaries when style does not allow wrapping
https://bugs.webkit.org/show_bug.cgi?id=269140
Summary
[IFC] Do don't consider natural breaking opportunities as soft-wrap boundarie...
alan
Reported
2024-02-10 09:37:32 PST
ssia
Attachments
Patch
(4.97 KB, patch)
2024-02-10 10:12 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(7.69 KB, patch)
2024-02-10 16:10 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(6.48 KB, patch)
2024-02-10 17:10 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(6.34 KB, patch)
2024-02-10 18:21 PST
,
alan
koivisto
: review+
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-02-10 10:12:43 PST
Created
attachment 469805
[details]
Patch
alan
Comment 2
2024-02-10 16:10:58 PST
Created
attachment 469810
[details]
Patch
alan
Comment 3
2024-02-10 17:10:32 PST
Created
attachment 469813
[details]
Patch
alan
Comment 4
2024-02-10 18:21:56 PST
Created
attachment 469814
[details]
[fast-cq]Patch
EWS
Comment 5
2024-02-10 20:01:20 PST
Committed
274435@main
(985716cb2922): <
https://commits.webkit.org/274435@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 469814
[details]
.
Radar WebKit Bug Importer
Comment 6
2024-02-10 20:02:16 PST
<
rdar://problem/122729801
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug