[IFC] Do don't consider natural breaking opportunities as soft-wrap boundaries when style does not allow wrapping https://bugs.webkit.org/show_bug.cgi?id=269140

Reviewed by Antti Koivisto.

This change addresses the FIXME InlineFormattingUtils::isAtSoftWrapOpportunity for text content.

"FIXME: Transition no-wrapping logic from InlineContentBreaker to here where we compute the soft wrap opportunity indexes"

Let's consider the text content continuous when neither side of the content (previous/next inline items) are allowed to wrap.
(Note that FIXME is not fully resolved yet)

* LayoutTests/fast/inline/do-not-break-content-when-nowrap-is-present-expected.html: Added.
* LayoutTests/fast/inline/do-not-break-content-when-nowrap-is-present.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingUtils.cpp:
(WebCore::Layout::isAtSoftWrapOpportunity):

Canonical link: https://commits.webkit.org/274435@main